bindings/python/lib/iota_sdk_ffi.py

_UniffiLib.uniffi_iota_sdk_ffi_fn_clone_movepackagepage.restype = ctypes.c_void_p
_UniffiLib.uniffi_iota_sdk_ffi_fn_free_movepackagepage.argtypes = (
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_iota_sdk_ffi_fn_free_movepackagepage.restype = None
_UniffiLib.uniffi_iota_sdk_ffi_fn_method_movepackagepage_data.argtypes = (
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_iota_sdk_ffi_fn_method_movepackagepage_data.restype = _UniffiRustBuffer
_UniffiLib.uniffi_iota_sdk_ffi_fn_method_movepackagepage_is_empty.argtypes = (
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_iota_sdk_ffi_fn_method_movepackagepage_is_empty.restype = ctypes.c_int8
_UniffiLib.uniffi_iota_sdk_ffi_fn_method_movepackagepage_page_info.argtypes = (
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_iota_sdk_ffi_fn_method_movepackagepage_page_info.restype = _UniffiRustBufferPageInfo
_UniffiLib.uniffi_iota_sdk_ffi_fn_clone_objectpage.argtypes = (
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_iota_sdk_ffi_fn_clone_objectpage.restype = ctypes.c_void_p
_UniffiLib.uniffi_iota_sdk_ffi_fn_free_objectpage.argtypes = (
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_iota_sdk_ffi_fn_free_objectpage.restype = None
_UniffiLib.uniffi_iota_sdk_ffi_fn_method_objectpage_data.argtypes = (
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_iota_sdk_ffi_fn_method_objectpage_data.restype = _UniffiRustBuffer
_UniffiLib.uniffi_iota_sdk_ffi_fn_method_objectpage_is_empty.argtypes = (
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_iota_sdk_ffi_fn_method_objectpage_is_empty.restype = ctypes.c_int8
_UniffiLib.uniffi_iota_sdk_ffi_fn_method_objectpage_page_info.argtypes = (
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_iota_sdk_ffi_fn_method_objectpage_page_info.restype = _UniffiRustBufferPageInfo
_UniffiLib.uniffi_iota_sdk_ffi_fn_clone_signedtransactionpage.argtypes = (
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_iota_sdk_ffi_fn_clone_signedtransactionpage.restype = ctypes.c_void_p
_UniffiLib.uniffi_iota_sdk_ffi_fn_free_signedtransactionpage.argtypes = (
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_iota_sdk_ffi_fn_free_signedtransactionpage.restype = None
_UniffiLib.uniffi_iota_sdk_ffi_fn_method_signedtransactionpage_data.argtypes = (
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_iota_sdk_ffi_fn_method_signedtransactionpage_data.restype = _UniffiRustBuffer
_UniffiLib.uniffi_iota_sdk_ffi_fn_method_signedtransactionpage_is_empty.argtypes = (
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_iota_sdk_ffi_fn_method_signedtransactionpage_is_empty.restype = ctypes.c_int8
_UniffiLib.uniffi_iota_sdk_ffi_fn_method_signedtransactionpage_page_info.argtypes = (
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_iota_sdk_ffi_fn_method_signedtransactionpage_page_info.restype = _UniffiRustBufferPageInfo
_UniffiLib.uniffi_iota_sdk_ffi_fn_clone_transactiondataeffectspage.argtypes = (
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_iota_sdk_ffi_fn_clone_transactiondataeffectspage.restype = ctypes.c_void_p
_UniffiLib.uniffi_iota_sdk_ffi_fn_free_transactiondataeffectspage.argtypes = (
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_iota_sdk_ffi_fn_free_transactiondataeffectspage.restype = None
_UniffiLib.uniffi_iota_sdk_ffi_fn_method_transactiondataeffectspage_data.argtypes = (
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_iota_sdk_ffi_fn_method_transactiondataeffectspage_data.restype = _UniffiRustBuffer
_UniffiLib.uniffi_iota_sdk_ffi_fn_method_transactiondataeffectspage_is_empty.argtypes = (
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_iota_sdk_ffi_fn_method_transactiondataeffectspage_is_empty.restype = ctypes.c_int8
_UniffiLib.uniffi_iota_sdk_ffi_fn_method_transactiondataeffectspage_page_info.argtypes = (
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_iota_sdk_ffi_fn_method_transactiondataeffectspage_page_info.restype = _UniffiRustBufferPageInfo
_UniffiLib.uniffi_iota_sdk_ffi_fn_clone_transactioneffectspage.argtypes = (
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_iota_sdk_ffi_fn_clone_transactioneffectspage.restype = ctypes.c_void_p
_UniffiLib.uniffi_iota_sdk_ffi_fn_free_transactioneffectspage.argtypes = (
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_iota_sdk_ffi_fn_free_transactioneffectspage.restype = None
_UniffiLib.uniffi_iota_sdk_ffi_fn_method_transactioneffectspage_data.argtypes = (
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_iota_sdk_ffi_fn_method_transactioneffectspage_data.restype = _UniffiRustBuffer
_UniffiLib.uniffi_iota_sdk_ffi_fn_method_transactioneffectspage_is_empty.argtypes = (
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_iota_sdk_ffi_fn_method_transactioneffectspage_is_empty.restype = ctypes.c_int8
_UniffiLib.uniffi_iota_sdk_ffi_fn_method_transactioneffectspage_page_info.argtypes = (
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_iota_sdk_ffi_fn_method_transactioneffectspage_page_info.restype = _UniffiRustBufferPageInfo
_UniffiLib.uniffi_iota_sdk_ffi_fn_clone_transactioneventpage.argtypes = (
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_iota_sdk_ffi_fn_clone_transactioneventpage.restype = ctypes.c_void_p
_UniffiLib.uniffi_iota_sdk_ffi_fn_free_transactioneventpage.argtypes = (
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_iota_sdk_ffi_fn_free_transactioneventpage.restype = None
_UniffiLib.uniffi_iota_sdk_ffi_fn_method_transactioneventpage_data.argtypes = (
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_iota_sdk_ffi_fn_method_transactioneventpage_data.restype = _UniffiRustBuffer
_UniffiLib.uniffi_iota_sdk_ffi_fn_method_transactioneventpage_is_empty.argtypes = (
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_iota_sdk_ffi_fn_method_transactioneventpage_is_empty.restype = ctypes.c_int8
_UniffiLib.uniffi_iota_sdk_ffi_fn_method_transactioneventpage_page_info.argtypes = (
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_iota_sdk_ffi_fn_method_transactioneventpage_page_info.restype = _UniffiRustBufferPageInfo
_UniffiLib.uniffi_iota_sdk_ffi_fn_clone_validatorpage.argtypes = (
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_iota_sdk_ffi_fn_clone_validatorpage.restype = ctypes.c_void_p
_UniffiLib.uniffi_iota_sdk_ffi_fn_free_validatorpage.argtypes = (
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_iota_sdk_ffi_fn_free_validatorpage.restype = None
_UniffiLib.uniffi_iota_sdk_ffi_fn_method_validatorpage_data.argtypes = (
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_iota_sdk_ffi_fn_method_validatorpage_data.restype = _UniffiRustBuffer
_UniffiLib.uniffi_iota_sdk_ffi_fn_method_validatorpage_is_empty.argtypes = (
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_iota_sdk_ffi_fn_method_validatorpage_is_empty.restype = ctypes.c_int8
_UniffiLib.uniffi_iota_sdk_ffi_fn_method_validatorpage_page_info.argtypes = (
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_iota_sdk_ffi_fn_method_validatorpage_page_info.restype = _UniffiRustBufferPageInfo
_UniffiLib.ffi_iota_sdk_ffi_rustbuffer_alloc.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.ffi_iota_sdk_ffi_rustbuffer_alloc.restype = _UniffiRustBuffer
_UniffiLib.ffi_iota_sdk_ffi_rustbuffer_from_bytes.argtypes = (
    _UniffiForeignBytes,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.ffi_iota_sdk_ffi_rustbuffer_from_bytes.restype = _UniffiRustBuffer
_UniffiLib.ffi_iota_sdk_ffi_rustbuffer_free.argtypes = (
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.ffi_iota_sdk_ffi_rustbuffer_free.restype = None
_UniffiLib.ffi_iota_sdk_ffi_rustbuffer_reserve.argtypes = (
    _UniffiRustBuffer,
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.ffi_iota_sdk_ffi_rustbuffer_reserve.restype = _UniffiRustBuffer
_UniffiLib.ffi_iota_sdk_ffi_rust_future_poll_u8.argtypes = (
    ctypes.c_uint64,
    _UNIFFI_RUST_FUTURE_CONTINUATION_CALLBACK,
    ctypes.c_uint64,
)
_UniffiLib.ffi_iota_sdk_ffi_rust_future_poll_u8.restype = None
_UniffiLib.ffi_iota_sdk_ffi_rust_future_cancel_u8.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_iota_sdk_ffi_rust_future_cancel_u8.restype = None
_UniffiLib.ffi_iota_sdk_ffi_rust_future_free_u8.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_iota_sdk_ffi_rust_future_free_u8.restype = None
_UniffiLib.ffi_iota_sdk_ffi_rust_future_complete_u8.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.ffi_iota_sdk_ffi_rust_future_complete_u8.restype = ctypes.c_uint8
_UniffiLib.ffi_iota_sdk_ffi_rust_future_poll_i8.argtypes = (
    ctypes.c_uint64,
    _UNIFFI_RUST_FUTURE_CONTINUATION_CALLBACK,
    ctypes.c_uint64,
)
_UniffiLib.ffi_iota_sdk_ffi_rust_future_poll_i8.restype = None
_UniffiLib.ffi_iota_sdk_ffi_rust_future_cancel_i8.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_iota_sdk_ffi_rust_future_cancel_i8.restype = None
_UniffiLib.ffi_iota_sdk_ffi_rust_future_free_i8.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_iota_sdk_ffi_rust_future_free_i8.restype = None
_UniffiLib.ffi_iota_sdk_ffi_rust_future_complete_i8.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.ffi_iota_sdk_ffi_rust_future_complete_i8.restype = ctypes.c_int8
_UniffiLib.ffi_iota_sdk_ffi_rust_future_poll_u16.argtypes = (
    ctypes.c_uint64,
    _UNIFFI_RUST_FUTURE_CONTINUATION_CALLBACK,
    ctypes.c_uint64,
)
_UniffiLib.ffi_iota_sdk_ffi_rust_future_poll_u16.restype = None
_UniffiLib.ffi_iota_sdk_ffi_rust_future_cancel_u16.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_iota_sdk_ffi_rust_future_cancel_u16.restype = None
_UniffiLib.ffi_iota_sdk_ffi_rust_future_free_u16.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_iota_sdk_ffi_rust_future_free_u16.restype = None
_UniffiLib.ffi_iota_sdk_ffi_rust_future_complete_u16.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.ffi_iota_sdk_ffi_rust_future_complete_u16.restype = ctypes.c_uint16
_UniffiLib.ffi_iota_sdk_ffi_rust_future_poll_i16.argtypes = (
    ctypes.c_uint64,
    _UNIFFI_RUST_FUTURE_CONTINUATION_CALLBACK,
    ctypes.c_uint64,
)
_UniffiLib.ffi_iota_sdk_ffi_rust_future_poll_i16.restype = None
_UniffiLib.ffi_iota_sdk_ffi_rust_future_cancel_i16.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_iota_sdk_ffi_rust_future_cancel_i16.restype = None
_UniffiLib.ffi_iota_sdk_ffi_rust_future_free_i16.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_iota_sdk_ffi_rust_future_free_i16.restype = None
_UniffiLib.ffi_iota_sdk_ffi_rust_future_complete_i16.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.ffi_iota_sdk_ffi_rust_future_complete_i16.restype = ctypes.c_int16
_UniffiLib.ffi_iota_sdk_ffi_rust_future_poll_u32.argtypes = (
    ctypes.c_uint64,
    _UNIFFI_RUST_FUTURE_CONTINUATION_CALLBACK,
    ctypes.c_uint64,
)
_UniffiLib.ffi_iota_sdk_ffi_rust_future_poll_u32.restype = None
